--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.uvaldeleadernews.com/
   link: http://uvaldeleadernews.com/top-stories/zeiner-releases-historical-novel-childrens-book/
 images:
-- name: oldhouse-granaryfield-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kandinsky-bv.jpg
-- name: nazi-invasion-high-speed-train-station-france.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-high-speed-train-station-france.jpg
-- name: nazi-invasion-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-early-computer-bletchley.jpg
-- name: status-berlin-status-berlin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-- name: oldcabin-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purp-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-free-woman.png
-- name: copper-circuit-train-station-cloud.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-station-cloud.jpg
-- name: school-clouds-church-clouds-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-5.jpg
-- name: old-house-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: beach-rocks-beach-rocks-currents-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-brush.jpg
-- name: blossombar-yellow-collage-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
-- name: old-cabin-oldcabin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
-- name: school-clouds-church-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
-- name: locked-up-steam-lock-up-steam-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
-- name: windowmountain-window-mountain-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-rain.jpg
-- name: aws-s3-stories-raven-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-raven-fence.jpg
-- name: old-granary-field-oldhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-oily-mcoilface.jpg
-- name: dragon-desert-desert-dragon-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
-- name: stories-new-64-185-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-64-185-800-500-0-max-0-1--1.jpg
-- name: machine-road-machine-road-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-emily-carr.jpg
-- name: oldcabin-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
-- name: adam-smith-adam-smith-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gan-vogh.jpg
-- name: wave-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-- name: school-clouds-church-clouds-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit-2.jpg
-- name: old-door-lock-old-door-lock-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crunch-paper.jpg
-- name: copper-circuit-public-market-farmers-market.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-public-market-farmers-market.jpg
-- name: yosemite-yosemite-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-circuit.jpg
-- name: aws-s3-stories-status-berlin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-matrix.jpg
-- name: razorwire-DSC-0080-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
-- name: oldsmallboat-oldsmallboat-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-deep-connections.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-- name: old-school-house-old-schoolhouse-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
-- name: walled-garden-walled-garden-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-aqua.jpg
-- name: status-berlin-status-berlin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
-- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
-- name: oldhouse-oldhouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-plentiful.jpg
-- name: crow-crow-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-aqua.jpg
-- name: oldcabin-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
-- name: aws-s3-stories-beach-rocks-currents-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-feed-people.jpg
-- name: beach-rocks-beach-rocks-currents-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crunch-paper.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: stories-old-door-lock-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-door-lock-copper-circuit.jpg
-- name: supreme-court-supremecourt.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt.jpg
-- name: store-on-corner-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
-- name: school-clouds-church-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-dali.jpg
-- name: aws-s3-stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
-- name: beach-clouds-lifeguard-beachclouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-wols.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: stalin-time-dragon-shadow-sun-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dragon-shadow-sun-2.jpg
+- name: oldhouse-granaryfield-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kand-two.jpg
+- name: capital-battle-capitolbattle-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-matrix.jpg
+- name: capital-battle-capitolbattle-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-granite.jpg
+- name: dragon-desert-desert-dragon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-paper.jpg
+- name: birdhouse-birdhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gred-mash.jpg
+- name: windowmountain-window-mountain-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
+- name: downtown-fredericksburg-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-dark-dali.JPG
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+- name: liberty-back-statue-liberty-back-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
+- name: death-valley-death-valley-national-park-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-space-pizza.jpg
+- name: crow_monet_one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_monet_one.jpg
+- name: old-granary-field-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
+- name: nazi-invasion-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-gauge-on-aircraft-carrier.jpg
+- name: dragon_close-up-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
+- name: oldhouse-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-blocks.jpg
+- name: server-cloud-server-racks-clouds-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-electricity.jpg
+- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+- name: art-museum-art-museum-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
+- name: server-cloud-server-racks-clouds-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-atari-asteroids.jpg
+- name: oldcabin-store-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-far-away.jpg
+- name: nazi-invasion-waterfall-southern-oregon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-waterfall-southern-oregon.jpg
+- name: san-francisco-street-view-san-francisco-street-view-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-nazi-poster.jpg
+- name: blossombar-creativity-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
+- name: locked-up-steam-lock-up-steam-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
+- name: mediterranean-mediterranean-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-gred-mash.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: old-house-oldhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-smoking-cigarette.jpg
+- name: abandonedbuildings_colored_circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colored_circuits.jpg
+- name: oldsmallboat-oldsmallboat-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-rain.jpg
+- name: stalin-time-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-concert-hall-bright-lights.jpg
+- name: copper-circuit-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7162.jpg
+- name: store-on-corner-oldcabin-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-wols.jpg
+- name: dragon-desert-desert-dragon-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
+- name: fence-fence-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-color.jpg
+- name: old-school-house-old-schoolhouse-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: christianity-christianity-under-construction-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-ww2-dresden.jpg
+- name: bf-skinner-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-press-room-flag.jpg
+- name: castle-wall-DSC-0067-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-electricity.JPG
+- name: server-cloud-server-racks-door-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-satan-red.jpg
+- name: border-crossing-bordercrossing-post-modern.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-post-modern.png
+- name: eduardo-eduardo-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-rain.jpg
+- name: dragon-desert-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-horiz-circuit.jpg
+- name: power-lines-power-lines-empty-space-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-dali.jpg
+- name: stalin-time-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
+- name: curtain-curtain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alien-goggles.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
+- name: white-house-lawn-white-house-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-granite.jpg
+- name: oldbarn-oldbarn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smoking-cigarette.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
 ---
 Tribal Council Acts On Tiny Homes, School Security, Drug Prevention.&nbsp;Hong Kong Protesters Demand Mainland Chinese Traders Leave.&nbsp;United Nations Human Rights Interview.&nbsp;Video Of The Week.&nbsp;Spicy Korean Seafood Noodle Soup At Kang Nam.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Recalling State's Worst Environmental Disaster.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;
