--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.uvaldeleadernews.com/
   link: http://uvaldeleadernews.com/top-stories/zeiner-releases-historical-novel-childrens-book/
 images:
-- name: downtheline-downtheline-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-storm.jpg
-- name: old-door-lock-old-door-lock-2-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
-- name: ellis-island-ellis-island-room-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
-- name: oldbarn-oldbarn-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
-- name: rain-princess-DSC_0169.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0169.jpg
-- name: trucksilo-trucksilo-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-gan-vogh.jpg
-- name: christianity-christianity-under-construction-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-- name: stories-adam-smith-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-blue-circuit.jpg
-- name: oldhouse-granaryfield-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-far-away.jpg
-- name: beach-rocks-beach-rocks-currents-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-dresden.jpg
-- name: containership-containership-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-granite.jpg
-- name: mediterranean-mediterranean-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-sunday.jpg
-- name: bf-skinner-palace-water-fountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-palace-water-fountain.jpg
-- name: beach-rocks-beach-rocks-currents-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-free-woman.jpg
-- name: server-cloud-server-racks-door-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-horiz-circuit.jpg
-- name: bf-skinner-white-house-press-room-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-press-room-flag.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: castle-wall-DSC-0067-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-horiz-circuit.JPG
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-- name: supreme-court-supremecourt-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-oily-mcoilface.jpg
-- name: old-door-lock-old-door-lock-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purple-storm.jpg
-- name: aws-s3-lighthouse-lighthouse-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-1200.jpg
-- name: curtain-curtain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-marcel-duchamp.jpg
-- name: beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-- name: dc-statue-dcstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
-- name: window-window-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-bright-sand.jpg
-- name: la-muse-dragon-turning-head.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-turning-head.jpg
-- name: wind-mills-windmills-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-brush.jpg
-- name: la-muse-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-highway-granary_36331800650_o.jpg
-- name: amusement-park-amusement-park-2-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-cinnamon-rolls.jpg
-- name: scream-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
-- name: copper-circuit-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-desktop-laptop-chair.jpg
-- name: copper-circuit-working-on-railroad-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-2.jpg
-- name: braceros-domingo-ulloa-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-early-computer-bletchley.jpg
-- name: lincoln-memorial-lincolnmemorial-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-hot-spicy.jpg
-- name: miamibeach-miamibeach-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-deep-connections.jpg
-- name: bf-skinner-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hallway-long-hospital.jpg
-- name: rain-princess-IMG_7954.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7954.jpg
-- name: server-cloud-server-racks-door-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
-- name: old-school-house-old-schoolhouse-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-5.jpg
-- name: windowmountain-window-mountain-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-pablo-blue.jpg
-- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
-- name: old-door-lock-old-door-lock-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit.jpg
-- name: stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-- name: bordercrossing-bordercrossing-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crabapple.jpg
-- name: walled-garden-walled-garden-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-pond.jpg
-- name: copper-circuit-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-125thstreet.jpg
-- name: white-house-lawn-white-house-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
-- name: liberty-back-statue-liberty-back-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-aqua.jpg
-- name: yosemite-yosemite-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
+- name: store-on-corner-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-rainbow-festival.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: death-valley-death-valley-national-park-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-cinnamon-rolls.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
+- name: window-window-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-ww2-color.jpg
+- name: copper-circuit-DSC_0088.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
+- name: old-school-house-old-schoolhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+- name: status-berlin-status-berlin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-brush.jpg
+- name: old-church-oldchurch-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-marcel-duchamp.jpg
+- name: art-museum-art-museum-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-dream.jpg
+- name: server-cloud-server-racks-clouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
+- name: store-on-corner-oldcabin-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-collage.jpg
+- name: christianity-christianity-under-construction-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
+- name: dc-statue-dcstatue-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-pablo-blue.jpg
+- name: trucksilo-trucksilo-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
+- name: la-muse-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hotel-down-sidewalk.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
+- name: sand-hand-sand-hand-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
+- name: ellis-island-ellisisland-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-rain.jpg
+- name: la-muse-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cargo-ship_36587814601_o.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: la-muse-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-concert-hall-bright-lights.jpg
+- name: statue-of-liberty-front-view-statueofliberty-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-spagetti-accident.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+- name: carry-load-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-three.jpg
+- name: rockingchair-rockingchair-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-dali.jpg
+- name: berlinwall2-berlinwall-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
+- name: nazi-invasion-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-vancouver-clouds.jpg
+- name: stalin-time-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-ship-waterfront-harbor.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
+- name: oldhouse-granaryfield-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crafty-painting.jpg
+- name: fence-fence-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+- name: store-on-corner-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-far-away.jpg
+- name: sand-hand-sand-hand-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-space-pizza.jpg
+- name: trucksilo-trucksilo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+- name: supreme-court-supremecourt-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-asteroids.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
+- name: crow-crow-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-really-hot.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+- name: oldcabin-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-three.jpg
+- name: bf-skinner-ship-bird-foreground.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-ship-bird-foreground.jpg
+- name: carry-load-carryload-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
+- name: gypsymosaic-gypsy-eyes-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-green-zuma.jpg
+- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
 ---
 Tribal Council Acts On Tiny Homes, School Security, Drug Prevention.&nbsp;Hong Kong Protesters Demand Mainland Chinese Traders Leave.&nbsp;United Nations Human Rights Interview.&nbsp;Video Of The Week.&nbsp;Spicy Korean Seafood Noodle Soup At Kang Nam.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Recalling State's Worst Environmental Disaster.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;
